# xiaojian

./: .gitignore  .npmrc  LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  clipboard.rs  commands.rs  hotkeys.rs  lib.rs  paste.rs  secret.rs  state.rs  store.rs  tray.rs  window.rs
ui/: main.css  main.html  main.js  panel.css  panel.html  panel.js  planet.js  shim.js  theme.js
